Added missing role

--- a/cloudformation/aws-intro-cloudformation.yaml
+++ b/cloudformation/aws-intro-cloudformation.yaml
@@ -93,7 +93,26 @@ Resources:
         - IpProtocol: tcp
           FromPort: '22'
           ToPort: '22'
-          CidrIp: !Ref SSHLocation
+          CidrIp: '0.0.0.0/0'
+  MyEC2InstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+        - Effect: Allow
+          Action:
+          - sts:AssumeRole
+          Principal:
+            Service:
+            - ec2.amazonaws.com
+      Path: "/"
+  MyEC2IamInstanceProfile:
+    Type: 'AWS::IAM::InstanceProfile'
+    Properties:
+      Roles:
+      - !Ref MyEC2InstanceRole
+      Path: /
   MyEC2Instance:
     Type: 'AWS::EC2::Instance'
     DependsOn: AttachGateway
@@ -112,10 +131,6 @@ Resources:
           DeviceIndex: '0'
           DeleteOnTermination: 'true'
           SubnetId: !Ref Subnet
-  MyEC2IamInstanceProfile:
-    Type: 'AWS::IAM::InstanceProfile'
-    Properties:
-      Path: /
 Outputs:
   URL:
     Value: !Join
