Added missing EC2 name + update and validate scripts

--- a/cloudformation/aws-intro-cloudformation.yaml
+++ b/cloudformation/aws-intro-cloudformation.yaml
@@ -122,6 +122,8 @@ Resources:
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref MyEC2IamInstanceProfile
       Tags:
+        - Key: Name
+          Value: !Join ["", [!Ref Prefix, "-", !Ref Env, "-ec2"]]
         - Key: CloudFormation
           Value: !Ref 'AWS::StackId'
       NetworkInterfaces:
@@ -138,3 +140,4 @@ Outputs:
       - - !GetAtt
           - MyEC2Instance
           - PublicIp
+
